--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,8 @@ body {
 }
 
 .image {
-  width: 350px;
+  width: 100%;
+  max-width: 350px;
   height: 350px;
   border-radius: 50%;
   object-fit: cover;
